# uma_pysis

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: example.py  input.yaml  prod.xyz  reac.xyz  run.sh
example/large/: input.yaml  ts_cand.xyz
example/small/: example.py  input.yaml  prod.xyz  reac.xyz
uma_pysis/: __init__.py  uma_pysis.py
