[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uma_pysis"
description = "UMA - Pysisyphus Interface"
readme = "README.md"
authors = [{name = "Takuto Ohmura"}]
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fairchem-core",
    "pysisyphus", 
    "torch>=2.6.0",
    "torch_geometric",
    "torch_scatter",
    "numpy",
    "ase>=3.25.0",
    "thermoanalysis @ git+https://github.com/eljost/thermoanalysis.git"
]

[project.scripts]
uma_pysis = "uma_pysis.uma_pysis:run_pysis"

[tool.setuptools.packages.find]
where = ["."]
include = ["uma_pysis*"]

[tool.setuptools]
package-data = { "uma_pysis" = ["py.typed"] }

[tool.setuptools.dynamic]
version = {attr = "uma_pysis.__version__"}
